Add configurable font handling for PDF generation
Add --font-config CLI option with three modes:
- auto (default): Use minimal fonts on non-Windows, full auto-discovery on Windows
- autoDiscoverFonts: Use docx4j's default font auto-discovery
- minimal: Always use a minimal, safe font list

Add pdf.additional-fonts YAML configuration to specify extra fonts to include
in the allow-list when using auto or minimal mode.

Changes:
- Create FontConfigMode enum for the three configuration modes
- Add PdfConfig nested class to AppConfig with additional-fonts list
- Update EmailSenderApplication to parse --font-config early and configure
  docx4j fonts based on the mode and additional fonts
- Add --font-config option to SendEmailCommand for CLI help documentation
- Update README with font configuration documentation